--- a/package.json
+++ b/package.json
@@ -66,8 +66,10 @@
     "webpack": "^4.44.1"
   },
   "resolutions": {
+    "bl": "^2.2.1",
     "minimist": "^1.2.5",
     "js-yaml": "^3.14.0",
+    "yargs-parser": "^18.1.3",
     "serialize-javascript": "^4.0.0"
   },
   "build": {
